# AutoTask

./: AutoTask.cpp  CMakeLists.txt  README  README.md  build.bat  main.cpp
include/: Ptime.hpp  config.h  config.hpp  task.h  task.hpp
includes/: DataGroup.hpp  PIO.hpp  Pconf.hpp  Pstr.hpp  Ptime.hpp  winruntime.hpp
src/: Ptime.hpp  task.h  winruntime.hpp
